# Osi

./: .gitignore  keep_alive.py  main.py  pyproject.toml
cogs/: eco.py  error_handler.py  fun.py  info.py  misc.py  shop.py  slash.py
data/: BankAccounts.db
util/: jsk.py
