[tool.poetry]
name = "osi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
"discord.py" = "^1.7.1"
jishaku = "^1.20.0"
aiosqlite = "^0.17.0"
discord-better-help = "^1.0.2"
discord-py-slash-command = "^1.1.2"
braceexpand = "^0.1.7"
disrank = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
